--- a/styles.css
+++ b/styles.css
@@ -9,13 +9,14 @@ body {
   min-width: 320px;
   background-color: #F8F0E3;
   margin: 0 auto;
-  padding: 15px;
+  /*padding: 15px;*/
 }
 
 .header {
   background-color: #002e5b;
-  padding: 0 1em;
+  padding-right: 5px;
 }
+
 .nav {
   display: flex;
   justify-content: space-between;
@@ -54,8 +55,13 @@ body {
   max-width: 650px;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1, h2, h3, h4, h5, h6, p {
   font-family: 'Roboto', sans-serif;
+  padding: 0 15px;
+}
+
+img, p {
+  margin-right: 15px;
 }
 
 a {
@@ -120,4 +126,11 @@ button:hover {
 #cat-meme {
   max-width: 150px;
   height: auto;
+}
+
+footer {
+  display: flex;
+  background-color: #002e5b;
+  color: white;
+  font-size: 16px;
 }
